Fix checkbox vertical align

--- a/packages/scss/src/components/dataTable/component.scss
+++ b/packages/scss/src/components/dataTable/component.scss
@@ -80,6 +80,10 @@
 
 			&:first-child {
 				inline-size: var(--components-dataTable-cellFirst-width);
+
+				.checkboxField {
+					--component-checkboxField-top: 0;
+				}
 			}
 		}
 
@@ -100,12 +104,6 @@
 
 		.dataTable-body-row-cell {
 			vertical-align: var(--components-dataTable-cell-verticalAlign);
-
-			&:first-child {
-				&:has(.checkboxField-input) {
-					padding-bottom: var(--pr-t-spacings-150);
-				}
-			}
 		}
 
 		.dataTable-foot-row-cell {
